test_regress/t/t_hierarchy_identifier_bad.out
%Error-ENDLABEL: t/t_hierarchy_identifier_bad.v:31:11: End label 'if_cnt_finish_bad' does not match begin label 'if_cnt_finish'
   31 |     end : if_cnt_finish_bad
      |           ^~~~~~~~~~~~~~~~~
                 ... For error description see https://verilator.org/warn/ENDLABEL?v=latest
%Error-ENDLABEL: t/t_hierarchy_identifier_bad.v:36:11: End label 'generate_for_bad' does not match begin label 'generate_for'
   36 |     end : generate_for_bad
      |           ^~~~~~~~~~~~~~~~
%Error-ENDLABEL: t/t_hierarchy_identifier_bad.v:42:11: End label 'generate_if_if_bad' does not match begin label 'generate_if_if'
   42 |     end : generate_if_if_bad
      |           ^~~~~~~~~~~~~~~~~~
%Error-ENDLABEL: t/t_hierarchy_identifier_bad.v:45:11: End label 'generate_if_else_bad' does not match begin label 'generate_if_else'
   45 |     end : generate_if_else_bad
      |           ^~~~~~~~~~~~~~~~~~~~
%Error-ENDLABEL: t/t_hierarchy_identifier_bad.v:48:13: End label 't_bad' does not match begin label 't'
   48 | endmodule : t_bad
      |             ^~~~~
%Error: Exiting due to
